# rent-manager

./: .gitignore  .impeccable.md  AGENTS.md  CRITIQUE.md  LICENSE  PRD.md  README.md  main.py  requirements.txt
backend/: .env.example  alembic.ini  app.db  pyproject.toml  requirements.txt  vercel.json
backend/alembic/versions/: 20260416_01_initial_multitenant_schema.py
backend/app/: main.py
backend/app/api/routes/: health.py  me.py  receipts.py  renters.py  seed.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/models/: __init__.py  dev_session.py  lease.py  payment.py  receipt.py  renter.py  tenant.py
backend/app/schemas/: lease.py  payment.py  receipt.py  renter.py
backend/app/services/: auth_context_service.py  lease_service.py  payment_service.py  receipt_service.py  rent_service.py  seed_service.py
backend/rent_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: migrate_sqlite_to_supabase.py  supabase_cleanup_dev_seed_clutter.sql  supabase_cleanup_expired_dev_sessions.sql  supabase_create_dev_sessions.sql
backend/tests/: conftest.py  test_auth_context.py  test_dev_seed_flow.py  test_health.py  test_input_validation.py  test_migration_script.py  test_models_schema.py  test_payments_api.py  test_rate_limit.py  test_renters_api.py  test_security_hardening.py  test_tenant_isolation.py
docs/: progress-2026-03-11.md  requirements.md
frontend/: .env.example  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
src/: ui.py  (+4 more)
(+86 files in other folders)
